crates/aiken-lang/src/parser/expr/when/snapshots/when_clause_double_todo.snap
---
source: crates/aiken-lang/src/parser/expr/when/clause.rs
description: "Code:\n\nwhen val is {\n  Bar1{..} -> todo\n  Bar2{..} -> todo\n}\n"
---
When {
    location: 0..53,
    subject: Var {
        location: 5..8,
        name: "val",
    },
    clauses: [
        UntypedClause {
            location: 16..32,
            patterns: [
                Constructor {
                    is_record: true,
                    location: 16..24,
                    name: "Bar1",
                    arguments: [],
                    module: None,
                    constructor: (),
                    with_spread: true,
                    tipo: (),
                },
            ],
            guard: None,
            then: Trace {
                kind: Todo,
                location: 28..32,
                then: ErrorTerm {
                    location: 28..32,
                },
                text: String {
                    location: 28..32,
                    value: "aiken::todo",
                },
            },
        },
        UntypedClause {
            location: 35..51,
            patterns: [
                Constructor {
                    is_record: true,
                    location: 35..43,
                    name: "Bar2",
                    arguments: [],
                    module: None,
                    constructor: (),
                    with_spread: true,
                    tipo: (),
                },
            ],
            guard: None,
            then: Trace {
                kind: Todo,
                location: 47..51,
                then: ErrorTerm {
                    location: 47..51,
                },
                text: String {
                    location: 47..51,
                    value: "aiken::todo",
                },
            },
        },
    ],
}
