crates/aiken-lang/src/parser/expr/when/snapshots/when_clause_solo_error.snap
---
source: crates/aiken-lang/src/parser/expr/when/clause.rs
description: "Code:\n\nwhen val is {\n  Bar1{..} -> error\n}\n"
---
When {
    location: 0..35,
    subject: Var {
        location: 5..8,
        name: "val",
    },
    clauses: [
        UntypedClause {
            location: 16..33,
            patterns: [
                Constructor {
                    is_record: true,
                    location: 16..24,
                    name: "Bar1",
                    arguments: [],
                    module: None,
                    constructor: (),
                    with_spread: true,
                    tipo: (),
                },
            ],
            guard: None,
            then: Trace {
                kind: Error,
                location: 28..33,
                then: ErrorTerm {
                    location: 28..33,
                },
                text: String {
                    location: 28..33,
                    value: "aiken::error",
                },
            },
        },
    ],
}
